--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <header>
             <h1>Logo</h1>
             <nav>
+                <a href="https://zeusbonto.github.io/WD-Finals/">Back to Resume</a>
                 |||
             </nav>
         </header>
